<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08222E"
    tools:context=".FourthActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="66dp"
        android:layout_height="67dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/puzzle"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/ic_hobbie" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="75dp"
        android:layout_height="63dp"
        android:layout_marginTop="172dp"
        android:contentDescription="@string/bike"
        app:layout_constraintEnd_toStartOf="@+id/imageView10"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bicycle_4" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="74dp"
        android:layout_height="53dp"
        android:layout_marginStart="174dp"
        android:contentDescription="@string/headphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/ic_headphones_3" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_movie" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/beach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:srcCompat="@drawable/ic_beach" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginBottom="364dp"
        android:text="@string/hobbies"
        android:textColor="#FFFCFC"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gamepad_3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="323dp"
        android:layout_height="335dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="4dp"
        android:text="@string/i_have_hobbies_such_as_watch_movies_and_series_listen_to_music_ride_a_bike_go_to_the_beach_and_play_games_with_family_and_friends"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>