<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08222E"
    tools:context=".Thirdactivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="119dp"
        android:layout_height="190dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="117dp"
        android:layout_marginBottom="530dp"
        android:contentDescription="@string/android"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        app:srcCompat="@drawable/ic_android" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="88dp"
        android:layout_height="54dp"
        android:layout_marginBottom="419dp"
        android:text="@string/skills"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="292dp"
        android:layout_height="328dp"
        android:layout_marginBottom="43dp"
        android:text="@string/skills2"
        android:textColor="#EDEDED"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>
