<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#08222E"
    tools:context=".FifthActivity">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="139dp"
        android:layout_height="115dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/award"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_award_7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="364dp"
        android:layout_height="449dp"
        android:layout_marginStart="14dp"
        android:text="@string/being_able_to_pursue_interesting_high_quality_work_that_has_a_positive_impact_securing_awards_promotions_and_other_acknowledgements_of_achievement_maintaining_a_happy_and_healthy_family_life_as_well_as_a_career_handling_challenge_complexity_and_change_exercising_leadership_authority_and_influence"
        android:textColor="#FFFCFC"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/button6"
        android:layout_width="221dp"
        android:layout_height="59dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="4dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>